@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-23T01:39:00Z",
+  "timestamp" : "2025-06-25T01:25:50Z",
   "count_outdated" : 1867,
   "uniques_outdated" : 1107,
-  "count" : 1872,
-  "uniques" : 1111,
+  "count" : 1873,
+  "uniques" : 1112,
   "clones" : [
     {
       "timestamp": "2025-06-18T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-06-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
